fixed columns component behavior on mobile

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -22,3 +22,17 @@
 .columns-4-cols > div {
   grid-template-columns: repeat(4, 1fr);
 }
+
+@media screen and (max-width: 767px) {
+    .columns-2-cols > div {
+      grid-template-columns: repeat(1, 1fr);
+    }
+
+    .columns-3-cols > div {
+      grid-template-columns: repeat(1, 1fr);
+    }
+
+    .columns-4-cols > div {
+      grid-template-columns: repeat(1, 1fr);
+    }
+}
